# EMFieldVisualizer

./: README.md
local_gui/: CMakeLists.txt
local_gui/include/: Charge.hpp  GUI.hpp  Vector2D.hpp
local_gui/src/: Charge.cpp  FieldCalculator.cpp  GUI.cpp  main.cpp
public_gui/include/: FieldCalculator.hpp  GUI.hpp
public_gui/src/: GUI.cpp  main.cpp
